--- a/Index.html
+++ b/Index.html
@@ -136,7 +136,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Cabbage?</h1>
-                                <p>Cabbage is a leafy green, red, or white biennial plant grown as an annual vegetable crop for its dense-leaved heads. Cabbage is a cool-season vegetable suited to both spring and fall. It belongs to the cole crop family (Brassica oleracea), which includes broccoli, Brussels sprouts, cauliflower, collards, kale, and kohlrabi. The trick to growing cabbage is steady, uninterrupted growth. That means rich soil, plenty of water, and good fertilization.</p>
+                                <p id = "first_crop_info">Cabbage is a leafy green, red, or white biennial plant grown as an annual vegetable crop for its dense-leaved heads. Cabbage is a cool-season vegetable suited to both spring and fall. It belongs to the cole crop family (Brassica oleracea), which includes broccoli, Brussels sprouts, cauliflower, collards, kale, and kohlrabi. The trick to growing cabbage is steady, uninterrupted growth. That means rich soil, plenty of water, and good fertilization.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id="first_crop_modal_tips">Plant fall cabbage 6 to 8 weeks before the first frost. Growing plants that have been exposed to cool weather become “hardened” and are tolerant of frost. Cabbage that matures in cool weather is deliciously sweet. Like most vegetables, cabbage needs at least 6 hours of full sun each day; more is better.</p>
@@ -166,7 +166,7 @@
                         <div class="modal-body">
                                 <div class="modal-information">
                                     <h1>ⓘ What is Chinese Cabbage?</h1>
-                                    <p>Chinese cabbage (Brassica rapa, var. pekinensis), also called pechay Baguio in the Philippines, a form of Chinese cabbage is cultivated for its edible leaves. Napa cabbage is widely grown in eastern Asia and is commonly used to make kimchi, a traditional Korean dish made of spicy fermented vegetables.</p>
+                                    <p id = "second_crop_info">Chinese cabbage (Brassica rapa, var. pekinensis), also called pechay Baguio in the Philippines, a form of Chinese cabbage is cultivated for its edible leaves. Napa cabbage is widely grown in eastern Asia and is commonly used to make kimchi, a traditional Korean dish made of spicy fermented vegetables.</p>
                                     <br>
                                     <h1>💡 Tips</h1>
                                     <p id="second_crop_modal_tips">Chinese cabbage or wombokis grown through direct  seeding. In direct seeding, plant 2 to 3 seeds per hill. When these have germinated, thin out the poor growers but leave one robust plant per hill. Space plants 45 cm to 60 cm apart as this variety is a large heading type. Keep the soil moist and transplant with care. If possible, start seedlings in a protected place and transplant on a cloudy day or in late-afternoon. Apply a starter fertilizer solution like Peters Blossom Starter when planting.
@@ -197,7 +197,7 @@
                         <div class="modal-body">
                                 <div class="modal-information">
                                     <h1>ⓘ What is Lettuce?</h1>
-                                    <p>Lettuce is an annual plant of the daisy family, Asteraceae. It is most often grown as a leaf vegetable, but sometimes for its stem and seeds. Lettuce is most often used for salads, although it is also seen in other kinds of food, such as soups, sandwiches and wraps; it can also be grilled.</p>
+                                    <p id = "third_crop_info">Lettuce is an annual plant of the daisy family, Asteraceae. It is most often grown as a leaf vegetable, but sometimes for its stem and seeds. Lettuce is most often used for salads, although it is also seen in other kinds of food, such as soups, sandwiches and wraps; it can also be grilled.</p>
                                     <br>
                                     <h1>💡 Tips</h1>
                                     <p id="third_crop_modal_tips">Lettuce seeds are often quite small and only require a planting depth of ½ to ½ inch deep. Growing lettuce in rows gives your garden a traditional look. Consider alternating rows of green and red lettuce for a whimsical touch. If you want to grow lettuce from seeds, start indoors during warm weather for fall.</p>
@@ -227,7 +227,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Cauliflower?</h1>
-                                <p>Cauliflower is one of several vegetables in the species Brassica oleracea in the genus Brassica, which is in the Brassicaceae family. It is an annual plant that reproduces by seed. Typically, only the head is eaten – the edible white flesh sometimes called "curd"</p>
+                                <p id = "fourth_crop_info">Cauliflower is one of several vegetables in the species Brassica oleracea in the genus Brassica, which is in the Brassicaceae family. It is an annual plant that reproduces by seed. Typically, only the head is eaten – the edible white flesh sometimes called "curd"</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "fourth_crop_modal_tips">Cauliflower is a popular vegetable in the Whole World. The fast way to grow cauliflower is to start with young plants. If you're starting indoors, wait until your seedlings have 5 leaves before transplanting them. Water regularly with 2 inches of water each week; even with normal rainfall, this usually requires supplemental watering. For best growth, side-dress the plants with a high-nitrogen fertilizer 3 t o 4 weeks after transplanting.</p>
@@ -257,7 +257,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Snap Beans?</h1>
-                                <p>Snap Beans or Green beans are the unripe, young fruit of various cultivars of the common bean. Immature or young pods of the runner bean, yardlong bean, and hyacinth bean are used in a similar way. Green beans are known by many common names, including French beans, string beans, snap beans, snaps, and the French name haricot vert.</p>
+                                <p id = "fifth_crop_info">Snap Beans or Green beans are the unripe, young fruit of various cultivars of the common bean. Immature or young pods of the runner bean, yardlong bean, and hyacinth bean are used in a similar way. Green beans are known by many common names, including French beans, string beans, snap beans, snaps, and the French name haricot vert.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "fifth_crop_title_modal_tips">Beans generally do not respond well to transplanting, and are usually direct sown around or just after the last spring frost. To get an earlier start, you can put down black plastic, to warm the soil. Black plastic is a type of plastic used by farmers to keep their beans from rot.
@@ -291,7 +291,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Garden Peas?</h1>
-                                <p>The Garden pea is most commonly the small spherical seed or the seed-pod of the pod fruit Pisum sativum. Each pod contains several peas, which can be green or yellow. Botanically, pea pods are fruit, since they contain seeds and develop from the ovary of a flower.</p>
+                                <p id = "sixth_crop_info">The Garden pea is most commonly the small spherical seed or the seed-pod of the pod fruit Pisum sativum. Each pod contains several peas, which can be green or yellow. Botanically, pea pods are fruit, since they contain seeds and develop from the ovary of a flower.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "sixth_crop_title_modal_tips">Garden Peas can grow in part shade, but they won't be as sweet or productive if grown in full sun. Select a sunny location and well-draining soil. Do NOT plant peas in the same place more than once in every four years. Rotate crops. To speed germination, soak seeds in water overnight before planting. Sow seeds 1 inch deep (slightly deeper if soil is dry) and about 2 to 2 inches apart. Plant rows 7 inches apart; peas do not like their roots distrubed, transplanting is possible.
@@ -322,7 +322,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Sweet Pepper?</h1>
-                                <p>The bell pepper is the fruit of plants in the Grossum cultivar group of the species Capsicum annuum. Cultivars of the plant produce fruits in different colors, including red, yellow, orange, green, white, and purple. Bell peppers are sometimes grouped with less pungent pepper varieties as "sweet peppers".</p>
+                                <p id = "seventh_crop_info">The bell pepper is the fruit of plants in the Grossum cultivar group of the species Capsicum annuum. Cultivars of the plant produce fruits in different colors, including red, yellow, orange, green, white, and purple. Bell peppers are sometimes grouped with less pungent pepper varieties as "sweet peppers".</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "seventh_crop_title_modal_tips">Plant them 18 to 24 inches apart in a sunny, well-drained spot. Pepper plants need at least 6-8 hours of sunlight per day. Mix compost or other organic matter into the soil when planting. Water immediately after planting, then regularly throughout the season. Peppers are a tender, warm-season crop, so they typically need to be started indoors if grown from seed. Start seeds indoors 8-10 weeks before your last spring frost date. Bell peppers require a fairly long growing season (60 to 90 days), which is another reason to start them indoors.
@@ -353,7 +353,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is White Potato?</h1>
-                                <p>They have a medium level of starch and are used for boiling, frying and microwaving. Compared to Russets, white potatoes have a smoother, thinner, lighter colored skin. The skins are so thin that they add a slight pleasant texture to creamy mashed potatoes and yet hold their shape when boiled.</p>
+                                <p id = "eigth_crop_info">They have a medium level of starch and are used for boiling, frying and microwaving. Compared to Russets, white potatoes have a smoother, thinner, lighter colored skin. The skins are so thin that they add a slight pleasant texture to creamy mashed potatoes and yet hold their shape when boiled.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "eight_crop_title_modal_tips">Plant each piece of potato (cut side down, with the eyes pointing up) every 12-15 inches, with the rows spaced 3 feet apart. If your space is limited or if you would like to grow only baby potatoes, you can decrease the spacing between plants. To begin with only fill the trench in with 4 inches of soil.
@@ -385,7 +385,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Carrots?</h1>
-                                <p>The carrot is a root vegetable, most commonly observed as orange in color, though purple, black, red, white, and yellow cultivars exist, all of which are domesticated forms of the wild carrot, Daucus carota, native to Europe and Southwestern Asia.</p>
+                                <p id = "ninth_crop_info">The carrot is a root vegetable, most commonly observed as orange in color, though purple, black, red, white, and yellow cultivars exist, all of which are domesticated forms of the wild carrot, Daucus carota, native to Europe and Southwestern Asia.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "ninth_crop_title_modal_tips">Plant your carrots in rows that are 1 to 2 feet apart. Seeds should be planted about a ½ inch deep and 1 to 2 inches apart. When growing carrots in the garden, you’ll wait for your carrot plants to appear. When the plants are 4 inches high, thin the plants to 2 inches  apart. You may find that some of the carrots are actually large enough to eat. When growing carrots in the garden, make sure to plant, per person, 5 to 10 feet of row to have enough carrots for table use. You will get about 1 pound 0.5 kg. of carrots in a 1 foot row. You want to keep your carrots free of weeds. This is especially important when they are small. The weeds will take nutrients away from the carrots and will cause poor carrot development.
@@ -416,7 +416,7 @@
                         <div class="modal-body">
                             <div class="modal-information">
                                 <h1>ⓘ What is Sayote?</h1>
-                                <p>Sayote is a Light green and pear-shaped with a thick skin and a hard core, chayote, or sayote as it is called in the Philippines, grows on vines. It is known as as vegetable pear or mirliton in some parts of the world. We even prefer using chayote over the traditional raw papaya when cooking tinola.</p>
+                                <p id = "tenth_crop_info">Sayote is a Light green and pear-shaped with a thick skin and a hard core, chayote, or sayote as it is called in the Philippines, grows on vines. It is known as as vegetable pear or mirliton in some parts of the world. We even prefer using chayote over the traditional raw papaya when cooking tinola.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
                                 <p id = "tenth_crop_title_modal_tips">Caring for the Growing Vine. Water the chayote vine about three times a week, and more regularly in hot, dry conditions. Be sure to have placed the plant in a place where it is able to clamber onto a trellis; chayote vines are rampant climbers and will cover trellises in just about no time at all.
